--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ fastapi==0.85.0
 jinja2==3.1.2
 python-multipart==0.0.5
 from_root
-boto3==1.24.82
+boto3==1.24.65
 annoy==1.17.1
 torch==2.1.1
 awscli==1.25.70
 torchvision
+PyYAML==3.10
+python-dotenv==0.21.0
 -e .
